[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.36", features = ["full"] }
dotenvy = "0.15"                                                            # Updated from dotenv to dotenvy for better async support
jsonwebtoken = "9.1"
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.4", features = ["std"] }
actix-web-httpauth = "0.8.2"
actix-web-lab = "0.24.1"
redis = "0.8.0"
